[package]
name = "uiexplore"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.39"
# winit = "0.30.6"
egui = "0.29.1"
eframe = {version = "0.29.1"} #, no-default-features = true, features = ["glow"]}
# egui_extras = { version = "0.29.1", features = ["all_loaders"] }
env_logger = "0.11.5"
uiautomation = "0.17.1" # "0.13.4"
win_event_hook = "0.4.0"
windows = {version = "0.58.0", features = ["Win32_Graphics_Gdi", "Win32_Foundation", "Win32_UI_HiDpi", "Win32_UI_WindowsAndMessaging"]}
time = "0.3.37"
